--- a/style.css
+++ b/style.css
@@ -11,16 +11,17 @@
 body
 {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    min-height: 200vh;
     background: #151515;
     max-height: 700vh;
     
 }
 .container
-{
+{   
+    margin-bottom: 100px;
     position: relative;
     flex-direction: row;
     display: flex;
@@ -29,7 +30,8 @@ body
     flex-wrap: wrap;
       
     
-    width: 450px;
+    width: 400px;
+    height: 500px;
 }
 .container .card
 {
@@ -75,7 +77,7 @@ body
 {
     color: rgb(255, 255, 255);
     font-weight: 700;
-    font-size: 30px;
+    font-size: 17px;
     letter-spacing: 1px;
     margin-bottom: 1px;
     text-transform: uppercase;
@@ -84,14 +86,14 @@ body
 .container .card .contentBx p 
 {
     color: #F7B538;
-    font-size: 14px;
+    font-size: 10px;
     font-weight: 10;
     margin-bottom: 30px;
 }
 .container .card .contentBx a
 {
     display: inline-block;
-    padding: 5px 50px;
+    padding: 8px 50px;
     margin-top: 0px;
     margin: 8px;
     
@@ -99,8 +101,8 @@ body
     text-transform: uppercase;
     color: rgb(255, 255, 255);
     font-weight: 600;
-    font-size: 16px;
-    letter-spacing: 3px;
+    font-size: 12px;
+    letter-spacing: 2px;
     text-decoration: none;
     box-shadow: -2px -2px 8px rgb(34, 34, 34),
                 -2px -2px 12px rgba(54, 54, 54, .3),
