--- a/style.css
+++ b/style.css
@@ -50,10 +50,11 @@ body
 }
 .container .card:hover
 {
-    box-shadow: inset -2px -2px 8px rgb(34, 34, 34),
-                inset -2px -2px 12px rgba(54, 54, 54, 0.5),
-                inset 2px 2px 4px rgba(36, 36, 36, 0.1),
-                inset 2px 2px 12px rgba(0,0,0,1.15);;
+    box-shadow:  -2px -2px 2px rgb(247, 181, 56),
+                 0px 0px 100px rgba(247, 181, 56, .7),
+                inset 2px 2px 100px rgba(247, 181, 56, .1),
+                 2px 2px 2px rgba(247, 181, 56, 1);
+ 
 }
 
 .container .card .imgBx
