--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body
 }
 .container
 {   
-    margin-bottom: 100px;
+    margin-bottom: 110px;
     position: relative;
     flex-direction: row;
     display: flex;
@@ -50,11 +50,11 @@ body
 }
 .container .card:hover
 {
-    box-shadow:  -2px -2px 2px rgb(247, 181, 56),
-                 0px 0px 100px rgba(247, 181, 56, .7),
-                inset 2px 2px 100px rgba(247, 181, 56, .1),
-                 2px 2px 2px rgba(247, 181, 56, 1);
- 
+    box-shadow: -2px -2px 5px rgb(247, 181, 56),
+                0px 0px 100px rgba(247, 181, 56, .5),
+                inset 0px 0px 100px rgba(247, 181, 56, .13),
+                2px 2px 5px rgba(247, 181, 56, 1)
+           ;
 }
 
 .container .card .imgBx
@@ -87,7 +87,7 @@ body
 .container .card .contentBx p 
 {
     color: #F7B538;
-    font-size: 10px;
+    font-size: 12px;
     font-weight: 10;
     margin-bottom: 30px;
 }
