--- a/style.css
+++ b/style.css
@@ -14,13 +14,19 @@ body
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 210vh;
+    min-height: 20vh;
     background: #151515;
     max-height: 700vh;
     
 }
+#white{
+    background: #151515;
+    
+}
 .container
 {   
+    margin-top: 500px;
+    
     margin-bottom: 310px;
     position: relative;
     flex-direction: row;
@@ -30,7 +36,23 @@ body
     flex-wrap: wrap;
       
     
-    width: 390px;
+    width: 400px;
+    height: 500px;
+}
+.container2
+{   
+    margin-top: 500px;
+    
+    margin-bottom: 310px;
+    position: relative;
+    flex-direction: row;
+    display: flex;
+    justify-content: flex;
+    align-items: flex;
+    flex-wrap: wrap;
+      
+    
+    width: 800px;
     height: 500px;
 }
 .container .card
@@ -56,7 +78,29 @@ body
                 2px 2px 5px rgba(247, 181, 56, 1)
            ;
 }
-
+.container2 .card2
+{
+  
+    margin: 10px;
+    margin-bottom: 10px;
+    border-radius: 20px;
+    padding: 20px 10px;
+    
+    background: #ebf5fc;
+    background: linear-gradient(145deg, #161616, #131313);
+    box-shadow: -2px -2px 8px rgb(34, 34, 34),
+                -2px -2px 12px rgba(43, 43, 43, 0.7),
+                inset 2px 2px 4px rgba(36, 36, 36, 0.1),
+                2px 2px 12px rgba(0,0,0,1.15);
+}
+.container2 .card2:hover
+{
+    box-shadow: -2px -2px 5px rgb(247, 181, 56),
+                0px 0px 100px rgba(247, 181, 56, .5),
+                inset 0px 0px 100px rgba(247, 181, 56, .13),
+                2px 2px 5px rgba(247, 181, 56, 1)
+           ;
+}
 .container .card .imgBx
 {
     position: relative;
@@ -74,10 +118,36 @@ body
     text-align: center;
     margin-bottom: 10px;
 }
+.container2 .card2 .contentBx2
+{
+    position: relative;
+    margin-top: 10px;
+    text-align: center;
+    margin-bottom: 10px;
+}
+.container2 .card2 .contentBx2 h2 
+{
+    color: rgb(255, 255, 255);
+    font-weight: 700;
+    text-align: center;
+    font-size: 20px;
+    letter-spacing: 1px;
+    margin-bottom: 1px;
+    text-transform: uppercase;
+}
+.container2 .card2 .contentBx2 p 
+{
+    color: #F7B538;
+    font-size: 14px;
+    font-weight: 10;
+    margin-bottom: 30px;
+
+}
 .container .card .contentBx h2
 {
     color: rgb(255, 255, 255);
     font-weight: 700;
+    text-align: center;
     font-size: 17px;
     letter-spacing: 1px;
     margin-bottom: 1px;
@@ -90,6 +160,31 @@ body
     font-size: 12px;
     font-weight: 10;
     margin-bottom: 30px;
+
+}
+b{
+    display: inline;
+    padding-top: 10px;
+    padding: 8px 50px;
+    margin-top: 10px;
+    margin: 8px;
+    color: #F7B538;
+
+    border-radius: 30px;
+    text-transform: uppercase;
+    font-size: 12px;
+    letter-spacing: 2px;
+    text-decoration: none;
+    box-shadow: -2px -2px 8px rgb(34, 34, 34),
+    -2px -2px 12px rgba(54, 54, 54, .3),
+    inset 2px 2px 4px rgba(36, 36, 36, 0.1),
+    2px 2px 12px rgba(0,0,0,.7)
+}
+b:hover {
+    box-shadow: inset -2px -2px 8px rgb(34, 34, 34),
+    inset -2px -2px 12px rgba(54, 54, 54, 0.3),
+    2px 2px 4px rgba(36, 36, 36, 0.1),
+    inset 2px 2px 12px rgba(0,0,0,.7);
 }
 .container .card .contentBx a
 {
@@ -108,7 +203,7 @@ body
     box-shadow: -2px -2px 8px rgb(34, 34, 34),
                 -2px -2px 12px rgba(54, 54, 54, .3),
                 inset 2px 2px 4px rgba(36, 36, 36, 0.1),
-                2px 2px 12px rgba(0,0,0,.7);;
+                2px 2px 12px rgba(0,0,0,.7);
 }
 .container .card .contentBx a:hover 
 {
@@ -116,7 +211,7 @@ body
     box-shadow: inset -2px -2px 8px rgb(34, 34, 34),
                 inset -2px -2px 12px rgba(54, 54, 54, 0.3),
                 2px 2px 4px rgba(36, 36, 36, 0.1),
-                inset 2px 2px 12px rgba(0,0,0,.7);;
+                inset 2px 2px 12px rgba(0,0,0,.7);
 }
 
 .container .card a:hover span
