--- a/style2.css
+++ b/style2.css
@@ -63,7 +63,33 @@ body
            ;
     transition: 350ms ease-in-out;
 }
+abbr[aria-label] {
+    text-decoration: none;
+    position: relative;    
+}
+abbr[aria-label]:hover::after, abbr[aroa-label]:focus::after{
+    content: attr(aria-label);
+    
+    transition: 0.5s opacity;
+    transition-delay: 0.5ms;
+    position: relative;
+    bottom: -0px;
+    left: -2px;
+    display: block;
+    white-space: nowrap;
+    margin-bottom: 12px;
+    margin-top: 2px;
+    padding: 4px 15px;
+    background: #151515;
+    
+    box-shadow: inset -2px -2px 3px rgb(34, 34, 34, .8),
+                inset -2px -2px 2px rgba(43, 43, 43, 0.5),
+                 2px 2px 4px rgba(36, 36, 36, 0.1),
+                inset 2px 2px 6px rgba(0,0,0, .7);
+    border-radius: 7px;
 
+    
+}
 .container .card .imgBx
 {
     position: relative;
@@ -121,8 +147,8 @@ body
 .container .card .contentBx p:hover 
 {
  
-    transform: scale(1.05);
-    transition: 60ms ease-in-out;
+    transform: scale(1.02);
+    transition: 200ms ease-in-out;
 }
 
 .container .card a:hover span
